[package]
name = "morouvif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
